#106 Fixing Spacing Issue Between Infocus tag and Infocus title

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -766,7 +766,7 @@
     .home-article-grid-1 {
       .infocus-tag {
         display: inline-block;
-        margin-bottom: 5px;
+        margin-bottom: 20px;
       }
       .infocus-title {
         display: inline-block;
